fix fuzzy search glitches with overflow counters

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -119,7 +119,7 @@ a.p-chip {
   padding-right: 2rem !important;
 }
 
-.p-chip--disabled {
+.p-chip--selected {
   background-color: rgba(0, 0, 0, 0.1);
   border: 1.5px solid var(--vf-color-border-neutral) !important;
 }
